--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <h1>KAPS</h1>
-    <h1>Make friends. Advance your career. Belong to community.</h1>
+    <h1>👋 hello.</h1>
+    <h2>Make friends. Advance your career. Belong to community.</h2>
     <p>KAPS (Korean American Professional Society) is a social and professional networking group for Koreans and
         Korean Americans in the San Francisco Bay Area. It was founded in 1992.</p>
     <p>To receive email updates, introduce yourself to <a href="mailto:hello@kaps.org">hello@kaps.org</a></p>
