--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css"> 
     <link rel="shortcut icon" type="image/png" href="favicon-32x32.png"/>
     <title>KAPS - Korean American Professional Society in the San Francisco Bay Area</title>
 </head>
@@ -27,7 +28,7 @@
     </ol>
     <p>
         We need more KAPS volunteers! <a href='https://kaps.org/volunteer'>Sign-up here.</a><br>
-        Most needed are: photographer, social media managers, event planners.
+        Most needed are: photographer, social media managers, and a designer to revamp this website design.
     </p>
 
     {% include instagramfeed.html %}
