--- a/index.html
+++ b/index.html
@@ -1,38 +1,24 @@
 ---
+layout: default
 ---
 
-<!DOCTYPE html>
-<html>
+<h3>KAPS</h3>
+<h1>👋 hello.</h1>
+<h1>Make friends. Advance your career. Belong to community.</h1>
+<h3>KAPS (Korean American Professional Society) is a social and professional networking group for Koreans and
+    Korean Americans in the San Francisco Bay Area. It was founded in 1992.</h3>
+<p>To receive email updates, introduce yourself to <a href="mailto:hello@kaps.org">hello@kaps.org</a></p>
 
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css"> 
-    <link rel="shortcut icon" type="image/png" href="favicon-32x32.png"/>
-    <title>KAPS - Korean American Professional Society in the San Francisco Bay Area</title>
-</head>
+<p>Here are the best ways to get connected:</p>
+<ol>
+    <li>Fill out the new member <a href='https://kaps.org/signup'>signup form</a>.</li>
+    <li>Join the “<a href='https://www.facebook.com/groups/kaps.newbies'>KAPS Newbies</a>” Facebook group.</li>
+    <li>Join the <a href='https://www.linkedin.com/groups/13793184/'>KAPS LinkedIn group</a>.</li>
+    <li>Follow <a href='https://www.instagram.com/kaps_org/'>@kaps_org</a> on Instagram.</li>
+</ol>
+<p>
+    We need more KAPS volunteers! <a href='https://kaps.org/volunteer'>Sign-up here.</a><br>
+    Most needed are: photographer, social media managers, and a designer to revamp this website design.
+</p>
 
-<body>
-    <h3>KAPS</h3>
-    <h1>👋 hello.</h1>
-    <h1>Make friends. Advance your career. Belong to community.</h1>
-    <h3>KAPS (Korean American Professional Society) is a social and professional networking group for Koreans and
-        Korean Americans in the San Francisco Bay Area. It was founded in 1992.</h3>
-    <p>To receive email updates, introduce yourself to <a href="mailto:hello@kaps.org">hello@kaps.org</a></p>
-
-    <p>Here are the best ways to get connected:</p>
-    <ol>
-        <li>Fill out the new member <a href='https://kaps.org/signup'>signup form</a>.</li>
-        <li>Join the “<a href='https://www.facebook.com/groups/kaps.newbies'>KAPS Newbies</a>” Facebook group.</li>
-        <li>Join the <a href='https://www.linkedin.com/groups/13793184/'>KAPS LinkedIn group</a>.</li>
-        <li>Follow <a href='https://www.instagram.com/kaps_org/'>@kaps_org</a> on Instagram.</li>
-    </ol>
-    <p>
-        We need more KAPS volunteers! <a href='https://kaps.org/volunteer'>Sign-up here.</a><br>
-        Most needed are: photographer, social media managers, and a designer to revamp this website design.
-    </p>
-
-    {% include instagramfeed.html %}
-
-</body>
-
-</html>
+{% include instagramfeed.html %}
